--- a/src/SCSS/login.scss
+++ b/src/SCSS/login.scss
@@ -15,7 +15,11 @@
         input:focus {
             outline: none;
         }
-        
+
+        input:invalid {
+            border: 1px solid red;
+        }
+
         .invalid {
             border: 1px solid red;
         }
