--- a/src/SCSS/login.scss
+++ b/src/SCSS/login.scss
@@ -6,22 +6,48 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     form {
-        width: 50%;
+        height: 66vh;
+        width: 33%;
         display: flex;
         flex-direction: column;
+        justify-content: center;
 
-        input:focus {
-            outline: none;
+        div {
+            margin-top: 50px;
+            input {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+            }
+            input:focus {
+                outline: none;
+            }
+    
+            input:invalid {
+                border: 1px solid red;
+            }
+
+            input[type=submit] {
+                text-align: center;
+            }
+    
+            .invalid {
+                border: 1px solid red;
+            }
+    
+            .error-message {
+                display: none;
+                float:left; 
+                width:100%;
+            }
+    
+            .error-message.invalid {
+                display: block;
+                border: none;
+                color: red;
+            }
         }
 
-        input:invalid {
-            border: 1px solid red;
-        }
-
-        .invalid {
-            border: 1px solid red;
-        }
     }
 }
