--- a/src/SCSS/login.scss
+++ b/src/SCSS/login.scss
@@ -13,37 +13,67 @@
         flex-direction: column;
         justify-content: center;
 
-        div {
-            margin-top: 50px;
-            input {
-                display: flex;
-                flex-direction: column;
-                width: 100%;
+        div.inner-form {
+            position: relative;
+            margin: 25px 0;
+            
+            label {
+                font-size: x-large;
             }
+
+            input {
+                width: 100%;
+                height: 70px;
+                padding-left: 5px;
+                font-size: x-large;
+
+                border: 1px solid;
+                border-radius: 5px;
+            }
+
             input:focus {
                 outline: none;
             }
-    
-            input:invalid {
-                border: 1px solid red;
+
+            input[type=submit]:hover {
+                cursor: pointer;
             }
 
             input[type=submit] {
-                text-align: center;
+                border: 1px solid black;
+
+                color: rgba($color: #000000, $alpha: 0.5);
+                background-color: rgba($color: #69d7ff, $alpha: 0.5);
+                box-shadow: 2px 5px rgb(0, 0, 0);
+                
+                transition: 400ms ease-in-out;
+            }
+            
+            input[type=submit]#login {
+                color: rgba($color: #ffffff, $alpha: 1.0);
+                background-color: rgba($color: #0016c1, $alpha: 1.0);
+                box-shadow: 7px 10px 10px rgb(80, 80, 80);
+            }
+            
+            input[type=submit]#login:focus {
+                box-shadow: none;
             }
     
-            .invalid {
+            input.invalid {
                 border: 1px solid red;
             }
     
-            .error-message {
-                display: none;
-                float:left; 
-                width:100%;
+            div.error-message {
+                position: absolute;
+                bottom: -10;
+                left: 0;
+
+                width: 100%;
+                opacity: 0.0;
             }
-    
-            .error-message.invalid {
-                display: block;
+            
+            div.error-message.invalid {
+                opacity: 1.0;
                 border: none;
                 color: red;
             }
