--- a/src/SCSS/login.scss
+++ b/src/SCSS/login.scss
@@ -6,12 +6,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    h1 {
+        font-size: 56px;
+    }
+
     form {
         height: 66vh;
         width: 33%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
 
         div.inner-form {
             position: relative;
@@ -24,7 +28,6 @@
             input {
                 width: 100%;
                 height: 70px;
-                padding-left: 5px;
                 font-size: x-large;
 
                 border: 1px solid;
@@ -35,19 +38,56 @@
                 outline: none;
             }
 
+            input[type=email], input[type=password] {
+                padding-left: 55px;
+                background-repeat: no-repeat;
+                background-position: left;
+                background-color: #1c1515;
+
+                color: rgb(228, 228, 228);
+            }
+            
+            input#email {
+                background-image: url('../assets/ic_username2x.png');
+            }
+
+            input#password {
+                background-image: url('../assets/ic_password2x.png');
+            }
+
+            input[type=email]::placeholder, input[type=password]::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+                color: rgb(228, 228, 228);
+                opacity: 1; /* Firefox */
+            }
+            
+            input[type=email]:-ms-input-placeholder, input[type=password]:-ms-input-placeholder { /* Internet Explorer 10-11 */
+                color: rgb(228, 228, 228);
+            }
+            
+            input[type=email]::-ms-input-placeholder, input[type=password]::-ms-input-placeholder { /* Microsoft Edge */
+                color: rgb(228, 228, 228);
+            }
+
+
             input[type=submit]:hover {
+                cursor: not-allowed;
+            }
+            
+            input[type=submit]#login:hover {
                 cursor: pointer;
             }
 
             input[type=submit] {
                 border: 1px solid black;
-
+                border-radius: 35px;
+                
                 color: rgba($color: #000000, $alpha: 0.5);
                 background-color: rgba($color: #69d7ff, $alpha: 0.5);
-                box-shadow: 2px 5px rgb(0, 0, 0);
+                box-shadow: -2px 5px rgb(0, 0, 0);
                 
                 transition: 400ms ease-in-out;
             }
+            
             
             input[type=submit]#login {
                 color: rgba($color: #ffffff, $alpha: 1.0);
@@ -65,11 +105,13 @@
     
             div.error-message {
                 position: absolute;
-                bottom: -10;
+                bottom: -30px;
                 left: 0;
 
                 width: 100%;
                 opacity: 0.0;
+
+                font-size: 20px;
             }
             
             div.error-message.invalid {
@@ -77,7 +119,43 @@
                 border: none;
                 color: red;
             }
+
+            div.error-message.invalid#login-error {
+                text-align: center;
+                bottom: -35px;
+            }
+        }
+    }
+
+    @media only screen and (max-width: 1024px) and (min-width: 415px) {
+        form {
+            width: 75%
+        }
+    }
+
+    @media only screen and (max-width: 414px) {
+        h1 {
+            font-size: 36px;
         }
 
+        form {
+            width: 75%;
+
+            div {
+                label {
+                    font-size: medium;
+                }
+        
+                input {
+                    width: 100%;
+                    height: 50px;
+                    font-size: medium;
+        
+                    border: 1px solid;
+                    border-radius: 5px;
+                }
+            }
+
+        }
     }
 }
