styled search bar. begin styling for mobile.

--- a/src/SCSS/to-do.scss
+++ b/src/SCSS/to-do.scss
@@ -65,6 +65,10 @@
         }
     }
 
+    h1 {
+        margin-bottom: 5vh;
+    }
+
     #main-container {
         position: relative;
         height: 66vh;
@@ -122,6 +126,14 @@
             border-top: none;
 
             input[name=search] {
+                padding-left: 55px;
+                background-image: url('../assets/search_icon.png');
+                background-repeat: no-repeat;
+                background-position: left;
+                background-size: 50px;
+                background-color: #1c1515;
+                color: rgb(228, 228, 228);
+                
                 transition: width 400ms linear;
             }
             
